--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GRID_01 | Pure Collective Intuition</title>
+    <title>GRID_01 | Global Intuition</title>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;700&family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --bg: #050505;
+            --bg: #000000;
             --accent: #00f2ff;
             --text: #ffffff;
-            --grid: rgba(0, 242, 255, 0.03);
+            --grid: rgba(255, 255, 255, 0.05);
         }
 
-        * { margin: 0; padding: 0; box-sizing: border-box; outline: none; }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
             background-color: var(--bg);
@@ -24,171 +24,149 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            transition: opacity 0.5s ease;
+            transition: all 0.5s ease;
         }
 
-        /* شبكة الخلفية - تصميم حصري لمشروع GRID_01 */
-        .grid-layer {
+        /* التصميم الشبكي الحصري */
+        .background-layer {
             position: fixed;
             top: 0; left: 0; width: 200%; height: 200%;
             background-image: 
                 linear-gradient(var(--grid) 1px, transparent 1px),
                 linear-gradient(90deg, var(--grid) 1px, transparent 1px);
-            background-size: 60px 60px;
-            transform: rotate(-10deg);
+            background-size: 40px 40px;
             z-index: -1;
-            animation: move 40s linear infinite;
+            animation: gridMove 40s linear infinite;
         }
 
-        @keyframes move {
-            from { transform: translate(0, 0) rotate(-10deg); }
-            to { transform: translate(-60px, -60px) rotate(-10deg); }
+        @keyframes gridMove {
+            from { transform: translate(0, 0) rotate(-5deg); }
+            to { transform: translate(-40px, -40px) rotate(-5deg); }
         }
 
-        .interface {
+        .main-frame {
             text-align: center;
             z-index: 10;
-            max-width: 900px;
+            max-width: 800px;
             padding: 20px;
         }
 
-        .header-status {
-            font-size: 0.75rem;
-            letter-spacing: 6px;
+        .system-status {
+            font-size: 0.7rem;
+            letter-spacing: 4px;
             color: var(--accent);
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             text-transform: uppercase;
-            opacity: 0.8;
         }
 
-        .headline {
-            font-size: clamp(1.8rem, 6vw, 3rem);
+        .hero-title {
+            font-size: clamp(1.5rem, 5vw, 3rem);
             font-weight: 700;
-            margin-bottom: 60px;
+            margin-bottom: 50px;
             line-height: 1.2;
-            letter-spacing: -1px;
         }
 
-        /* الكرة النابضة - التفاعل الأساسي */
-        .core-sphere {
-            width: 160px;
-            height: 160px;
+        /* النواة التفاعلية */
+        .intuition-core {
+            width: 140px;
+            height: 140px;
             background: radial-gradient(circle, var(--accent) 0%, transparent 70%);
             border-radius: 50%;
             margin: 0 auto;
             cursor: pointer;
-            border: 1px solid rgba(0, 242, 255, 0.1);
+            border: 1px solid rgba(0, 242, 255, 0.2);
             position: relative;
-            transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: 0.4s;
         }
 
-        .core-sphere::after {
-            content: '';
-            position: absolute;
-            top: -10px; left: -10px; right: -10px; bottom: -10px;
-            border-radius: 50%;
-            border: 1px solid rgba(0, 242, 255, 0.05);
-            animation: ripple 3s infinite;
-        }
-
-        @keyframes ripple {
-            0% { transform: scale(1); opacity: 1; }
-            100% { transform: scale(1.5); opacity: 0; }
-        }
-
-        .core-sphere:hover {
+        .intuition-core:hover {
             transform: scale(1.1);
-            box-shadow: 0 0 60px rgba(0, 242, 255, 0.3);
-            border-color: var(--accent);
+            box-shadow: 0 0 50px var(--accent);
         }
 
         /* نظام اللغات */
-        .lang-nav {
-            position: absolute; top: 30px; right: 30px;
-            display: flex; gap: 15px;
+        .lang-control {
+            position: fixed; top: 30px; right: 30px;
+            display: flex; gap: 20px;
         }
 
-        .lang-link {
-            color: #444; text-decoration: none; font-size: 0.8rem;
-            cursor: pointer; transition: 0.3s;
+        .lang-toggle {
+            color: #555; cursor: pointer; font-size: 0.8rem;
+            text-decoration: none; transition: 0.3s;
         }
 
-        .lang-link.active { color: var(--accent); font-weight: bold; }
+        .lang-toggle.active { color: var(--accent); font-weight: bold; }
 
-        .footer-metrics {
-            margin-top: 80px;
+        .data-stream {
+            margin-top: 60px;
             display: flex; justify-content: center; gap: 40px;
-            font-size: 0.65rem; color: #333;
-            text-transform: uppercase; letter-spacing: 2px;
+            font-size: 0.6rem; color: #333; letter-spacing: 2px;
         }
-
     </style>
 </head>
-<body id="app-viewport">
+<body id="main-view">
 
-    <div class="lang-nav">
-        <span class="lang-link active" id="btn-en" onclick="updateLocale('en')">ENGLISH</span>
-        <span class="lang-link" id="btn-ar" onclick="updateLocale('ar')">العربية</span>
+    <div class="lang-control">
+        <span class="lang-toggle active" id="en-btn" onclick="setLocale('en')">EN</span>
+        <span class="lang-toggle" id="ar-btn" onclick="setLocale('ar')">AR</span>
     </div>
 
-    <div class="grid-layer"></div>
+    <div class="background-layer"></div>
 
-    <div class="interface">
-        <div class="header-status" id="ui-live">System Online: 928,472 Nodes</div>
+    <div class="main-frame">
+        <div class="system-status" id="status-line">Nodes Active: 928,472</div>
         
-        <h1 class="headline" id="ui-headline">
-            Global Intuition Hub: <br>
-            <span style="color: var(--accent);">[PREDICTIVE_SYNC]</span>
+        <h1 class="hero-title" id="main-title">
+            Collective Intuition:<br>
+            <span style="color: var(--accent);">[SYSTEM_READY]</span>
         </h1>
 
-        <div class="core-sphere" onclick="gatekeeper()"></div>
+        <div class="intuition-core" onclick="executeTransition()"></div>
 
-        <div class="footer-metrics">
-            <div id="ui-sync">Confidence: 98.2%</div>
-            <div id="ui-coverage">Region: Global</div>
+        <div class="data-stream">
+            <div id="stat-1">CONFIDENCE: 98%</div>
+            <div id="stat-2">SYNC: ACTIVE</div>
         </div>
     </div>
 
     <script>
-        const locale = {
+        const lexicon = {
             en: {
-                live: "System Online: 928,472 Nodes",
-                headline: "Global Intuition Hub: <br><span style='color: #00f2ff;'>[PREDICTIVE_SYNC]</span>",
-                sync: "Confidence: 98.2%",
-                coverage: "Region: Global",
+                status: "Nodes Active: 928,472",
+                title: "Collective Intuition:<br><span style='color: #00f2ff;'>[SYSTEM_READY]</span>",
+                s1: "CONFIDENCE: 98%",
+                s2: "SYNC: ACTIVE",
                 dir: "ltr",
                 font: "'Space Grotesk', sans-serif"
             },
             ar: {
-                live: "النظام متصل: 928,472 عقدة",
-                headline: "مركز الحدس العالمي: <br><span style='color: #00f2ff;'>[مزامنة_توقعية]</span>",
-                sync: "الثقة: 98.2%",
-                coverage: "النطاق: عالمي",
+                status: "العقد النشطة: 928,472",
+                title: "الحدس الجماعي:<br><span style='color: #00f2ff;'>[النظام_جاهز]</span>",
+                s1: "الثقة: 98%",
+                s2: "المزامنة: نشطة",
                 dir: "rtl",
                 font: "'Cairo', sans-serif"
             }
         };
 
-        function updateLocale(lang) {
-            const data = locale[lang];
-            const view = document.getElementById('app-viewport');
-            
-            view.dir = data.dir;
-            view.style.fontFamily = data.font;
-            document.getElementById('ui-live').innerText = data.live;
-            document.getElementById('ui-headline').innerHTML = data.headline;
-            document.getElementById('ui-sync').innerText = data.sync;
-            document.getElementById('ui-coverage').innerText = data.coverage;
+        function setLocale(l) {
+            const d = lexicon[l];
+            const body = document.getElementById('main-view');
+            body.dir = d.dir;
+            body.style.fontFamily = d.font;
+            document.getElementById('status-line').innerText = d.status;
+            document.getElementById('main-title').innerHTML = d.title;
+            document.getElementById('stat-1').innerText = d.s1;
+            document.getElementById('stat-2').innerText = d.s2;
 
-            // تحديث حالة الأزرار
-            document.getElementById('btn-en').classList.toggle('active', lang === 'en');
-            document.getElementById('btn-ar').classList.toggle('active', lang === 'ar');
+            document.getElementById('en-btn').classList.toggle('active', l === 'en');
+            document.getElementById('ar-btn').classList.toggle('active', l === 'ar');
         }
 
-        function gatekeeper() {
-            // رابط الدفع الجديد الخاص بمشروع GRID_01 حصراً
-            // تم التأكد من عدم وجود أي روابط قديمة هنا
-            window.location.href = "https://buy.stripe.com/test_8x2fZhcoCbnC26l3C77ss00";
+        function executeTransition() {
+            // هنا تضع رابط المشروع الجديد فقط عند الجاهزية
+            console.log("Interaction Triggered");
+            // window.location.href = "رابط_مشروعك_الجديد_هنا";
         }
     </script>
 </body>
