--- a/index.html
+++ b/index.html
@@ -3,83 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>GRID_01 | PRO</title>
+    <title>GRID_01 | GLOBAL REAL-TIME HUB</title>
+    
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;700&family=Cairo:wght@700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/three"></script>
     <script src="https://unpkg.com/globe.gl"></script>
 
     <style>
-        :root { --accent: #00f2ff; --bg: #000; --pos: #00ffcc; --neu: #bd00ff; --neg: #ff4d00; }
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { background: #000; color: #fff; font-family: 'Space Grotesk', sans-serif; height: 100vh; overflow: hidden; }
+        :root { --accent: #00f2ff; --bg: #050505; --pos: #00ffcc; --neu: #bd00ff; --neg: #ff4d00; }
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
+        body, html { margin: 0; padding: 0; background: var(--bg); color: #fff; height: 100vh; overflow: hidden; font-family: 'Space Grotesk', sans-serif; }
 
-        /* حاوية الكرة الأرضية */
-        #globe-container { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; }
+        /* طبقة الكرة الأرضية الخلفية */
+        #globe-viz { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; }
 
-        /* واجهة المستخدم الاحترافية */
-        #ui-layer {
+        /* طبقة الواجهة العلوية */
+        #app-overlay {
             position: relative; z-index: 10; height: 100vh;
             display: flex; flex-direction: column; justify-content: space-between;
-            align-items: center; pointer-events: none; padding: 40px 20px;
+            align-items: center; padding: 40px 20px; pointer-events: none;
         }
+
         .interactive { pointer-events: auto; }
 
-        .header-box { text-align: center; }
-        .hero-title { font-size: 2rem; letter-spacing: 2px; text-shadow: 0 0 15px var(--accent); margin-top: 10px; }
+        /* الهوية البصرية */
+        .brand { text-align: center; }
+        .brand h1 { font-size: 2.2rem; font-weight: 700; letter-spacing: 4px; text-shadow: 0 0 20px var(--accent); margin: 5px 0; }
+        .system-tag { font-size: 10px; color: var(--accent); letter-spacing: 6px; text-transform: uppercase; opacity: 0.8; }
 
-        /* زر البدء المركزي */
-        .core-trigger {
-            width: 100px; height: 100px; border-radius: 50%;
-            background: radial-gradient(circle, var(--accent) 0%, transparent 75%);
-            border: 1px solid var(--accent); cursor: pointer;
-            transition: 0.5s; animation: pulseGlow 2s infinite;
+        /* النواة المركزية */
+        .portal-trigger {
+            width: 130px; height: 130px; border-radius: 50%;
+            background: radial-gradient(circle, var(--accent) 0%, transparent 80%);
+            border: 2px solid var(--accent); cursor: pointer;
+            box-shadow: 0 0 40px rgba(0, 242, 255, 0.2);
+            transition: 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+            animation: pulse-ring 2.5s infinite;
         }
-        @keyframes pulseGlow {
-            0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(0,242,255,0.7); }
-            70% { transform: scale(1.1); box-shadow: 0 0 0 20px rgba(0,242,255,0); }
-            100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(0,242,255,0); }
+        @keyframes pulse-ring { 
+            0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(0, 242, 255, 0.4); }
+            70% { transform: scale(1.1); box-shadow: 0 0 0 30px rgba(0, 242, 255, 0); }
+            100% { transform: scale(1); }
         }
 
-        /* أزرار التوقعات */
-        .vote-panel { display: none; gap: 15px; flex-wrap: wrap; justify-content: center; margin-bottom: 40px; }
-        .vote-btn {
-            padding: 12px 24px; border-radius: 30px; border: 1px solid rgba(255,255,255,0.2);
-            background: rgba(0,0,0,0.8); color: #fff; font-weight: bold; cursor: pointer;
-            backdrop-filter: blur(10px); transition: 0.3s; font-size: 11px; letter-spacing: 1px;
-        }
-        .vote-btn:hover { border-color: var(--accent); transform: translateY(-3px); }
+        /* لوحة التحكم السفلية */
+        .control-panel { display: none; gap: 12px; flex-wrap: wrap; justify-content: center; margin-bottom: 30px; width: 100%; max-width: 500px; animation: slideUp 0.8s ease; }
+        @keyframes slideUp { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
 
-        /* اللغة */
-        .lang-control { position: absolute; top: 20px; right: 20px; z-index: 20; pointer-events: auto; }
-        .lang-link { color: #444; cursor: pointer; font-size: 12px; margin-left: 10px; transition: 0.3s; }
-        .lang-link.active { color: var(--accent); font-weight: bold; }
+        .btn-status {
+            flex: 1; min-width: 100px; padding: 18px 10px; border-radius: 12px;
+            border: 1px solid rgba(255,255,255,0.1); background: rgba(10,10,10,0.8);
+            color: #fff; font-size: 11px; font-weight: 700; cursor: pointer;
+            backdrop-filter: blur(15px); transition: 0.4s;
+        }
+        .btn-status:active { transform: scale(0.95); }
+        .stable-btn { color: var(--pos); border-bottom: 3px solid var(--pos); }
+        .uncertain-btn { color: var(--neu); border-bottom: 3px solid var(--neu); }
+        .volatile-btn { color: var(--neg); border-bottom: 3px solid var(--neg); }
+
+        /* تبديل اللغات */
+        .lang-fixed { position: fixed; top: 25px; right: 25px; z-index: 100; pointer-events: auto; }
+        .l-option { background: none; border: none; color: #444; font-weight: bold; cursor: pointer; margin-left: 15px; font-size: 13px; }
+        .l-option.active { color: var(--accent); }
 
         .hidden { display: none !important; }
     </style>
 </head>
 <body>
 
-    <div id="globe-container"></div>
+    <div id="globe-viz"></div>
 
-    <div class="lang-control">
-        <span class="lang-link active" id="ln-en" onclick="setLanguage('en')">EN</span>
-        <span class="lang-link" id="ln-ar" onclick="setLanguage('ar')">AR</span>
-    </div>
+    <nav class="lang-fixed">
+        <button class="l-option active" id="l-en" onclick="changeLang('en')">EN</button>
+        <button class="l-option" id="l-ar" onclick="changeLang('ar')">AR</button>
+    </nav>
 
-    <div id="ui-layer">
-        <header class="header-box">
-            <p style="font-size: 9px; letter-spacing: 5px; color: var(--accent)">SYSTEM_STATUS: ACTIVE</p>
-            <h1 class="hero-title" id="main-title">GRID_01</h1>
+    <div id="app-overlay">
+        <header class="brand">
+            <p class="system-tag" id="tag">System Status: Ready</p>
+            <h1 id="m-title">GRID_01</h1>
         </header>
 
-        <section id="start-screen" class="interactive">
-            <div class="core-trigger" onclick="launchExperience()"></div>
+        <section id="init-zone" class="interactive">
+            <div class="portal-trigger" onclick="enterSystem()"></div>
         </section>
 
-        <section id="vote-panel" class="vote-panel interactive">
-            <button class="vote-btn" style="color:var(--pos)" onclick="submitVote('stable')">STABLE</button>
-            <button class="vote-btn" style="color:var(--neu)" onclick="submitVote('uncertain')">UNCERTAIN</button>
-            <button class="vote-btn" style="color:var(--neg)" onclick="submitVote('volatile')">VOLATILE</button>
+        <section id="action-zone" class="control-panel interactive">
+            <button class="btn-status stable-btn" onclick="sendVote('stable')">STABLE</button>
+            <button class="btn-status uncertain-btn" onclick="sendVote('uncertain')">UNCERTAIN</button>
+            <button class="btn-status volatile-btn" onclick="sendVote('volatile')">VOLATILE</button>
         </section>
     </div>
 
@@ -98,79 +110,83 @@
         };
 
         const app = initializeApp(firebaseConfig);
-        const db = getDatabase(app);
+        const database = getDatabase(app);
 
-        window.db = db;
+        // تصدير للسكربت الخارجي
+        window.fbDB = database;
         window.fbRef = ref;
         window.fbOnValue = onValue;
         window.fbTransaction = runTransaction;
     </script>
 
     <script>
-        let globeInstance, geoJsonData, liveData = {};
+        let myGlobe, geoData, currentData = {};
 
-        // 1. تحميل الخريطة مسبقاً لضمان السرعة
+        // 1. تحميل صامت لبيانات الخرائط قبل البدء لضمان الجودة
         fetch('https://raw.githubusercontent.com/vasturiano/globe.gl/master/example/datasets/ne_110m_admin_0_countries.geojson')
-            .then(res => res.json()).then(data => { geoJsonData = data; });
+            .then(res => res.json()).then(data => { geoData = data; });
 
-        function setLanguage(lang) {
-            const isAr = lang === 'ar';
+        function changeLang(l) {
+            const isAr = l === 'ar';
             document.body.dir = isAr ? 'rtl' : 'ltr';
-            document.getElementById('main-title').innerText = isAr ? "الشبكة_01" : "GRID_01";
-            document.getElementById('ln-ar').classList.toggle('active', isAr);
-            document.getElementById('ln-en').classList.toggle('active', !isAr);
-            // تغيير نصوص الأزرار
-            const btns = document.querySelectorAll('.vote-btn');
+            document.getElementById('m-title').innerText = isAr ? "الشبكة_01" : "GRID_01";
+            document.getElementById('tag').innerText = isAr ? "حالة النظام: جاهز" : "System Status: Ready";
+            document.getElementById('l-ar').classList.toggle('active', isAr);
+            document.getElementById('l-en').classList.toggle('active', !isAr);
+            const btns = document.querySelectorAll('.btn-status');
             if(isAr) {
-                btns[0].innerText = "مستقر"; btns[1].innerText = "غير مؤكد"; btns[2].innerText = "مضطرب";
+                btns[0].innerText = "مستقر"; btns[1].innerText = "قلق"; btns[2].innerText = "مضطرب";
+                document.body.style.fontFamily = 'Cairo';
             } else {
                 btns[0].innerText = "STABLE"; btns[1].innerText = "UNCERTAIN"; btns[2].innerText = "VOLATILE";
+                document.body.style.fontFamily = 'Space Grotesk';
             }
         }
 
-        function launchExperience() {
-            document.getElementById('start-screen').classList.add('hidden');
-            document.getElementById('vote-panel').style.display = 'flex';
-            
-            // 2. إعداد الكرة الأرضية
-            globeInstance = Globe()(document.getElementById('globe-container'))
+        function enterSystem() {
+            document.getElementById('init-zone').classList.add('hidden');
+            document.getElementById('action-zone').style.display = 'flex';
+            initGlobeEngine();
+        }
+
+        function initGlobeEngine() {
+            myGlobe = Globe()(document.getElementById('globe-viz'))
                 .globeImageUrl('https://unpkg.com/three-globe/example/img/earth-dark.jpg')
                 .backgroundImageUrl('https://unpkg.com/three-globe/example/img/night-sky.png')
-                .showAtmosphere(true).atmosphereColor('#00f2ff').atmosphereDaylightAlpha(0.1);
+                .atmosphereColor('#00f2ff').showAtmosphere(true).atmosphereDaylightAlpha(0.15);
 
-            globeInstance.controls().autoRotate = true;
-            globeInstance.controls().autoRotateSpeed = 0.6;
+            myGlobe.controls().autoRotate = true;
+            myGlobe.controls().autoRotateSpeed = 0.8;
 
-            // 3. الربط الحي مع Firebase
-            if(window.db) {
-                window.fbOnValue(window.fbRef(window.db, 'countries'), (snapshot) => {
-                    liveData = snapshot.val() || {};
-                    updateGlobePolygons();
-                });
-            }
+            // المزامنة الحية مع Firebase
+            window.fbOnValue(window.fbRef(window.fbDB, 'countries'), (snap) => {
+                currentData = snap.val() || {};
+                renderUpdates();
+            });
         }
 
-        function updateGlobePolygons() {
-            if (!globeInstance || !geoJsonData) return;
-            globeInstance.polygonsData(geoJsonData.features)
+        function renderUpdates() {
+            if (!myGlobe || !geoData) return;
+            myGlobe.polygonsData(geoData.features)
                 .polygonCapColor(d => {
-                    const countryStats = liveData[d.properties.ISO_A2];
-                    if (!countryStats) return 'rgba(0, 242, 255, 0.05)';
-                    const maxVal = Math.max(countryStats.stable || 0, countryStats.uncertain || 0, countryStats.volatile || 0);
-                    if (maxVal === 0) return 'rgba(0, 242, 255, 0.05)';
-                    if (maxVal === countryStats.stable) return 'rgba(0, 255, 204, 0.8)';
-                    if (maxVal === countryStats.uncertain) return 'rgba(189, 0, 255, 0.8)';
-                    return 'rgba(255, 77, 0, 0.8)';
+                    const stats = currentData[d.properties.ISO_A2];
+                    if (!stats) return 'rgba(0, 242, 255, 0.04)';
+                    const max = Math.max(stats.stable || 0, stats.uncertain || 0, stats.volatile || 0);
+                    if (max === 0) return 'rgba(0, 242, 255, 0.04)';
+                    if (max === stats.stable) return 'rgba(0, 255, 204, 0.85)';
+                    if (max === stats.uncertain) return 'rgba(189, 0, 255, 0.85)';
+                    return 'rgba(255, 77, 0, 0.85)';
                 })
-                .polygonStrokeColor(() => 'rgba(0, 242, 255, 0.2)')
-                .polygonLabel(({ properties: d }) => `<b>${d.NAME}</b>`);
+                .polygonStrokeColor(() => 'rgba(0, 242, 255, 0.15)')
+                .polygonLabel(({ properties: d }) => `<div style="padding:10px; background:#000; border:1px solid var(--accent); font-weight:bold;">${d.NAME}</div>`);
         }
 
-        function submitVote(type) {
-            const ISO_CODE = "SA"; // تجربة على السعودية
-            if(window.db) {
-                const countryRef = window.fbRef(window.db, 'countries/' + ISO_CODE);
-                window.fbTransaction(countryRef, (current) => {
+        function sendVote(type) {
+            // نستخدم كود السعودية SA كتجربة، الكود سيتفاعل مع كل دول العالم
+            const country = "SA"; 
+            if(window.fbDB) {
+                const targetRef = window.fbRef(window.fbDB, 'countries/' + country);
+                window.fbTransaction(targetRef, (current) => {
                     if (!current) current = { stable: 0, uncertain: 0, volatile: 0 };
                     current[type]++;
                     return current;
@@ -178,9 +194,7 @@
             }
         }
 
-        window.addEventListener('resize', () => {
-            if(globeInstance) globeInstance.width(window.innerWidth).height(window.innerHeight);
-        });
+        window.addEventListener('resize', () => { if(myGlobe) myGlobe.width(window.innerWidth).height(window.innerHeight); });
     </script>
 </body>
 </html>
