--- a/index.html
+++ b/index.html
@@ -2,208 +2,50 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Faris Global Link - Satellite Edition</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SatChat | محادثة الأقمار</title>
     <style>
-        :root {
-            --neon: #00f2ff;
-            --purple: #7d2ae8;
-            --glass: rgba(0, 0, 0, 0.75);
-        }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        
-        body, html { 
-            height: 100%; 
-            background: #000; 
-            font-family: 'Segoe UI', sans-serif; 
-            overflow: hidden; 
-        }
-
-        /* الخريطة الحقيقية ملء الشاشة */
-        #map-bg {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background-image: url('https://upload.wikimedia.org/wikipedia/commons/8/83/Equirectangular_projection_SW.jpg');
-            background-size: cover;
-            background-position: center;
-            filter: brightness(0.5) contrast(1.2);
-            z-index: 1;
-        }
-
-        /* طبقة الشبكة الرقمية فوق الخريطة */
-        .grid-overlay {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background-image: radial-gradient(circle, transparent 20%, #000 150%),
-                              linear-gradient(rgba(0, 242, 255, 0.05) 1px, transparent 1px),
-                              linear-gradient(90deg, rgba(0, 242, 255, 0.05) 1px, transparent 1px);
-            background-size: 100% 100%, 30px 30px, 30px 30px;
-            z-index: 2;
-        }
-
-        /* واجهة التحكم السفلية */
-        .ui-container {
-            position: absolute;
-            bottom: 30px; left: 50%;
-            transform: translateX(-50%);
-            width: 90%;
-            max-width: 600px;
-            z-index: 10;
-            background: var(--glass);
-            backdrop-filter: blur(15px);
-            -webkit-backdrop-filter: blur(15px);
-            border: 1px solid rgba(0, 242, 255, 0.3);
-            border-radius: 20px;
-            padding: 20px;
-            box-shadow: 0 0 30px rgba(0, 242, 255, 0.2);
-        }
-
-        .input-group { display: flex; gap: 10px; margin-bottom: 15px; }
-        
-        input {
-            flex: 1;
-            padding: 12px;
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(0, 242, 255, 0.2);
-            border-radius: 10px;
-            color: #fff;
-            outline: none;
-            text-align: center;
-        }
-
-        button {
-            width: 100%;
-            padding: 15px;
-            border-radius: 12px;
-            border: none;
-            background: linear-gradient(90deg, var(--neon), var(--purple));
-            color: white;
-            font-weight: bold;
-            font-size: 16px;
-            cursor: pointer;
-            transition: 0.3s;
-            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
-        }
-
-        button:active { transform: scale(0.98); }
-
-        /* النقاط الجغرافية */
-        .marker {
-            position: absolute;
-            width: 12px; height: 12px;
-            background: var(--neon);
-            border-radius: 50%;
-            box-shadow: 0 0 20px var(--neon);
-            z-index: 5;
-            transform: translate(-50%, -50%);
-        }
-
-        /* خط الإرسال */
-        .laser-line {
-            position: absolute;
-            height: 2px;
-            background: var(--neon);
-            box-shadow: 0 0 10px var(--neon);
-            transform-origin: left center;
-            z-index: 4;
-            display: none;
-        }
-
-        .status-text {
-            color: var(--neon);
-            font-size: 12px;
-            text-align: center;
-            margin-top: 10px;
-            font-family: monospace;
-        }
+        body { font-family: sans-serif; background: #0b0e14; color: white; margin: 0; display: flex; flex-direction: column; hieght: 100vh; }
+        header { background: #1a202c; padding: 15px; text-align: center; border-bottom: 2px solid #38bdf8; }
+        #chat-box { flex: 1; padding: 20px; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; }
+        .msg { padding: 10px; border-radius: 8px; max-width: 80%; }
+        .sent { background: #38bdf8; align-self: flex-start; color: black; }
+        .received { background: #2d3748; align-self: flex-end; }
+        .input-area { padding: 20px; background: #1a202c; display: flex; gap: 10px; }
+        input { flex: 1; padding: 10px; border-radius: 5px; border: none; }
+        button { background: #38bdf8; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-weight: bold; }
     </style>
 </head>
 <body>
 
-<div id="map-bg"></div>
-<div class="grid-overlay"></div>
+<header>
+    <h2>SatChat 🛰️</h2>
+    <small id="status">الحالة: متصل عبر الشبكة المحلية</small>
+</header>
 
-<div id="markers-layer"></div>
-<div id="laser" class="laser-line"></div>
+<div id="chat-box">
+    <div class="msg received">مرحباً! هل تسمعني؟ (عبر القمر الصناعي)</div>
+    <div class="msg sent">نعم، الإشارة قوية هنا.</div>
+</div>
 
-<div class="ui-container">
-    <div class="input-group">
-        <input type="number" id="sid" placeholder="ID المرسل">
-        <input type="number" id="rid" placeholder="ID المستقبل">
-    </div>
-    <input type="text" id="msg" placeholder="اكتب رسالتك المشفرة..." style="width: 100%; margin-bottom: 15px;">
-    <button onclick="transmit()">إرسال فوري عبر القمر الصناعي</button>
-    <div id="status" class="status-text">SYSTEM READY...</div>
+<div class="input-area">
+    <input type="text" id="messageInput" placeholder="اكتب رسالتك هنا...">
+    <button onclick="sendMessage()">إرسال</button>
 </div>
 
 <script>
-    // المواقع موزعة بدقة على الخريطة العالمية (Satellite Map)
-    const locations = {
-        "1": { name: "ينبع", x: 61, y: 46 },
-        "2": { name: "لندن", x: 48, y: 28 },
-        "3": { name: "نيويورك", x: 26, y: 38 },
-        "4": { name: "طوكيو", x: 84, y: 41 },
-        "5": { name: "سيدني", x: 86, y: 78 }
-    };
-
-    const layer = document.getElementById('markers-layer');
-    Object.keys(locations).forEach(id => {
-        const loc = locations[id];
-        const m = document.createElement('div');
-        m.className = 'marker';
-        m.style.left = loc.x + '%';
-        m.style.top = loc.y + '%';
-        layer.appendChild(m);
-    });
-
-    function transmit() {
-        const s = document.getElementById('sid').value;
-        const r = document.getElementById('rid').value;
-        const status = document.getElementById('status');
-
-        if(!locations[s] || !locations[r]) {
-            status.innerText = "ERROR: INVALID ID";
-            return;
+    function sendMessage() {
+        const input = document.getElementById('messageInput');
+        if(input.value.trim() !== "") {
+            const chatBox = document.getElementById('chat-box');
+            const newMsg = document.createElement('div');
+            newMsg.className = 'msg sent';
+            newMsg.innerText = input.value;
+            chatBox.appendChild(newMsg);
+            input.value = "";
+            chatBox.scrollTop = chatBox.scrollHeight;
         }
-
-        const start = locations[s];
-        const end = locations[r];
-        const laser = document.getElementById('laser');
-
-        // تحويل النسب إلى بكسل
-        const x1 = (start.x / 100) * window.innerWidth;
-        const y1 = (start.y / 100) * window.innerHeight;
-        const x2 = (end.x / 100) * window.innerWidth;
-        const y2 = (end.y / 100) * window.innerHeight;
-
-        const dist = Math.sqrt(Math.pow(x2-x1, 2) + Math.pow(y2-y1, 2));
-        const angle = Math.atan2(y2-y1, x2-x1) * 180 / Math.PI;
-
-        laser.style.display = 'block';
-        laser.style.left = x1 + 'px';
-        laser.style.top = y1 + 'px';
-        laser.style.width = '0px';
-        laser.style.transform = `rotate(${angle}deg)`;
-
-        status.innerText = `CONNECTING: ${start.name} >> ${end.name}`;
-
-        let w = 0;
-        const timer = setInterval(() => {
-            w += dist / 40;
-            if(w >= dist) {
-                laser.style.width = dist + 'px';
-                clearInterval(timer);
-                status.innerText = "DATA RECEIVED SUCCESSFULLY ✅";
-                setTimeout(() => { laser.style.display = 'none'; }, 3000);
-            } else {
-                laser.style.width = w + 'px';
-            }
-        }, 15);
     }
 </script>
-
 </body>
 </html>
