--- a/index.html
+++ b/index.html
@@ -3,154 +3,187 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Vault 2026 | المتجر الرقمي</title>
+    <title>Crypto Empire | إمبراطورية الكريبتو</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --accent: #7000ff;
-            --bg: #030303;
-            --text: #ffffff;
+            --neon-green: #00ff88;
+            --neon-red: #ff3e3e;
+            --neon-blue: #00d4ff;
+            --dark-bg: #050505;
         }
 
         body {
-            background: var(--bg);
-            color: var(--text);
-            font-family: 'Inter', system-ui, -apple-system, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
-            overflow: hidden;
+            padding: 0;
+            background-color: var(--dark-bg);
+            color: white;
+            font-family: 'Tajawal', 'Orbitron', sans-serif;
+            overflow-x: hidden;
+            transition: all 0.3s ease;
         }
 
-        /* حاوية الجائزة المركزية */
-        .vault-container {
-            text-align: center;
-            perspective: 1000px;
-        }
-
-        .prize-card {
-            width: 320px;
-            height: 450px;
-            background: linear-gradient(145deg, #111, #050505);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 24px;
+        /* حاوية الموقع - تدعم جميع الأجهزة */
+        .app-container {
             display: flex;
             flex-direction: column;
+            min-height: 100vh;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        /* الهيدر والمبدل اللغوي */
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 2px solid var(--neon-blue);
+            padding-bottom: 10px;
+            box-shadow: 0 0 15px var(--neon-blue);
+        }
+
+        .logo {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1.5rem;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            color: var(--neon-blue);
+            text-shadow: 0 0 10px var(--neon-blue);
+        }
+
+        .lang-switch button {
+            background: transparent;
+            border: 1px solid var(--neon-green);
+            color: var(--neon-green);
+            padding: 5px 15px;
+            cursor: pointer;
+            font-family: inherit;
+            border-radius: 5px;
+        }
+
+        /* منطقة اللعبة (المدينة النيون) */
+        .game-world {
+            flex-grow: 1;
+            display: flex;
             justify-content: center;
             align-items: center;
-            padding: 30px;
-            position: relative;
-            transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-            cursor: pointer;
-            box-shadow: 0 30px 60px rgba(0,0,0,0.5);
+            text-align: center;
+            margin-top: 50px;
+            border: 1px dashed #333;
+            border-radius: 20px;
+            background: radial-gradient(circle, #111 0%, #000 100%);
         }
 
-        .prize-card:hover {
-            transform: translateY(-10px) rotateY(5deg);
-            border-color: var(--accent);
-            box-shadow: 0 0 40px rgba(112, 0, 255, 0.3);
+        .hero-text h1 {
+            font-size: 3rem;
+            margin-bottom: 10px;
+            text-shadow: 0 0 20px var(--neon-green);
         }
 
-        .orb {
-            width: 120px;
-            height: 120px;
-            background: var(--accent);
-            border-radius: 50%;
-            filter: blur(40px);
-            position: absolute;
-            opacity: 0.5;
-            animation: pulse 4s infinite;
-        }
-
-        @keyframes pulse {
-            0%, 100% { transform: scale(1); opacity: 0.3; }
-            50% { transform: scale(1.5); opacity: 0.6; }
-        }
-
-        .main-button {
-            margin-top: 40px;
-            background: white;
+        /* أزرار الأكشن */
+        .main-btn {
+            background: var(--neon-green);
             color: black;
             border: none;
-            padding: 18px 45px;
-            font-size: 1.1rem;
-            font-weight: 700;
-            border-radius: 12px;
+            padding: 15px 40px;
+            font-size: 1.2rem;
+            font-weight: bold;
+            border-radius: 50px;
             cursor: pointer;
-            transition: 0.3s;
-            letter-spacing: -0.5px;
+            box-shadow: 0 0 20px var(--neon-green);
+            transition: transform 0.2s;
         }
 
-        .main-button:hover {
-            background: var(--accent);
-            color: white;
-            transform: scale(1.05);
+        .main-btn:hover {
+            transform: scale(1.1);
         }
 
-        .price-label {
-            display: block;
-            margin-bottom: 10px;
-            opacity: 0.5;
-            font-size: 0.9rem;
-            letter-spacing: 2px;
+        /* شريط العملات الحي (Ticker) */
+        .ticker-wrap {
+            width: 100%;
+            overflow: hidden;
+            background: #111;
+            padding: 10px 0;
+            margin-top: 20px;
         }
 
-        /* تأثير الفوز */
-        #win-overlay {
-            position: fixed;
-            inset: 0;
-            background: rgba(0,0,0,0.95);
-            display: none;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            z-index: 100;
-            backdrop-filter: blur(10px);
+        .ticker {
+            display: flex;
+            white-space: nowrap;
+            animation: marquee 20s linear infinite;
+        }
+
+        .ticker-item {
+            margin: 0 20px;
+            color: var(--neon-green);
+        }
+
+        @keyframes marquee {
+            0% { transform: translateX(100%); }
+            100% { transform: translateX(-100%); }
+        }
+
+        /* استجابة للهواتف */
+        @media (max-width: 600px) {
+            .hero-text h1 { font-size: 1.8rem; }
+            .logo { font-size: 1rem; }
         }
     </style>
 </head>
 <body>
 
-    <div class="vault-container">
-        <span class="price-label">PREMIUM ENTRY $4.99</span>
-        <div class="prize-card" id="box">
-            <div class="orb"></div>
-            <h2 style="z-index: 1; font-size: 1.5rem;">انقر للكشف عن جائزتك</h2>
-            <p style="z-index: 1; opacity: 0.6; margin-top: 15px;">200 جائزة رقمية نادرة</p>
-        </div>
-        <button class="main-button" id="unlockBtn">فتح الصندوق الآن</button>
-    </div>
+    <div class="app-container">
+        <header>
+            <div class="logo" id="logoText">Crypto Empire</div>
+            <div class="lang-switch">
+                <button onclick="toggleLang()">English / عربي</button>
+            </div>
+        </header>
 
-    <div id="win-overlay">
-        <h1 style="font-size: 3rem; margin-bottom: 10px;">مبروك!</h1>
-        <p id="prize-text" style="font-size: 1.5rem; color: var(--accent);"></p>
-        <button class="main-button" onclick="location.reload()">استلام وإغلاق</button>
+        <main class="game-world">
+            <div class="hero-text">
+                <h1 id="mainTitle">ابنِ إمبراطوريتك الرقمية</h1>
+                <p id="subTitle">حوّل تحركات السوق إلى قوة وسيطرة</p>
+                <button class="main-btn" id="startBtn">ابدأ الغزو الآن</button>
+            </div>
+        </main>
+
+        <div class="ticker-wrap">
+            <div class="ticker">
+                <span class="ticker-item">BTC: $95,432 ▲</span>
+                <span class="ticker-item">ETH: $2,841 ▲</span>
+                <span class="ticker-item">SOL: $145 ▼</span>
+                <span class="ticker-item">BNB: $590 ▲</span>
+            </div>
+        </div>
     </div>
 
     <script>
-        const btn = document.getElementById('unlockBtn');
-        const overlay = document.getElementById('win-overlay');
-        const prizeText = document.getElementById('prize-text');
+        // نظام تبديل اللغات الذكي
+        let currentLang = 'ar';
+        const content = {
+            ar: {
+                title: "ابنِ إمبراطوريتك الرقمية",
+                sub: "حوّل تحركات السوق إلى قوة وسيطرة",
+                btn: "ابدأ الغزو الآن",
+                dir: "rtl"
+            },
+            en: {
+                title: "Build Your Crypto Empire",
+                sub: "Turn market moves into power and dominance",
+                btn: "Start the Conquest",
+                dir: "ltr"
+            }
+        };
 
-        // مصفوفة الجوائز (200 جائزة متنوعة)
-        const prizes = [
-            "بطاقة أمازون 100$", "اشتراك نيتفلكس سنة", "500 نقطة ولاء", 
-            "كود خصم 95%", "مفتاح لعبة Steam", "رصيد 50$ كاش"
-            // يمكن تكملة الـ 200 هنا برمجياً
-        ];
-
-        btn.addEventListener('click', () => {
-            btn.innerText = "جاري الاتصال بـ Blockchain...";
-            btn.disabled = true;
-
-            // محاكاة عملية معالجة احترافية
-            setTimeout(() => {
-                const randomPrize = prizes[Math.floor(Math.random() * prizes.length)];
-                prizeText.innerText = randomPrize;
-                overlay.style.display = 'flex';
-            }, 2000);
-        });
+        function toggleLang() {
+            currentLang = (currentLang === 'ar') ? 'en' : 'ar';
+            document.documentElement.lang = currentLang;
+            document.documentElement.dir = content[currentLang].dir;
+            document.getElementById('mainTitle').innerText = content[currentLang].title;
+            document.getElementById('subTitle').innerText = content[currentLang].sub;
+            document.getElementById('startBtn').innerText = content[currentLang].btn;
+        }
     </script>
 </body>
 </html>
